# SFML_GameEngine

./: CMakeLists.txt  main.cpp
class/: EventManager.h  GameObject.cpp  GameObject.h
